--- a/{{cookiecutter.project_slug}}/CMakeLists.txt
+++ b/{{cookiecutter.project_slug}}/CMakeLists.txt
@@ -1,15 +1,15 @@
 # -*- coding: utf-8 -*-
-# QCGrids is a numerical integration library for quantum chemistry.
-# Copyright (C) 2011-2017 The QCGrids developers
+# {{cookiecutter.description}} 
+# Copyright (C) {% now 'local', '%Y' %} {{cookiecutter.author}} <{{cookiecutter.email}}>
 #
-# This file is part of QCGrids.
+# This file is part of {{cookiecutter.project_name}}.
 #
-# QCGrids is free software; you can redistribute it and/or
+# {{cookiecutter.project_name}} is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
 # as published by the Free Software Foundation; either version 3
 # of the License, or (at your option) any later version.
 #
-# QCGrids is distributed in the hope that it will be useful,
+# {{cookiecutter.project_name}} is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
