--- a/{{cookiecutter.project_slug}}/tools/conda.recipe/meta.yaml
+++ b/{{cookiecutter.project_slug}}/tools/conda.recipe/meta.yaml
@@ -20,8 +20,8 @@ requirements:
     - nose
     - setuptools
     - cython >=0.24.1
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
+    - {% raw %} {{ compiler('c') }} {% raw %}
+    - {% raw %} {{ compiler('cxx') }} {% raw %}
 
 about:
   dev_url: https://github.com/{{cookiecutter.project_org}}/{{cookiecutter.project_name}}
