Fix project_name in .cardboardlint.yml

--- a/{{cookiecutter.project_slug}}/.cardboardlint.yml
+++ b/{{cookiecutter.project_slug}}/.cardboardlint.yml
@@ -1,6 +1,6 @@
 linters:
 - import:
-    packages: ['iodata']
+    packages: ['{{cookiecutter.project_name}}']
 - namespace:
     filefilter: ['- */__init__.py', '- */test_*.py', '- *setup.py', '- tools/*',
                  '+ *.py', '+ *.pyx']
